# kMC_hyperbranched_polyester

./: CMakeLists.txt  Makefile  README.md  analysis.cpp  analysis.h  archive.sh  capK.txt  chainUpdate.cpp  chainUpdate.h  chainUpdate_backup.cpp  gatherStats.sh  homo.cpp  homobackup.cpp  input.txt  inputs.cpp  inputs.h  job.q  jobpersonal.q  molecularWeight.cpp  molecularWeight.h  program  rateConstants.txt  rateConstantsVariations.xls  searchEnds.sh  submit10jobs.sh  test.sh  tests.cpp  tests.h
program.dSYM/Contents/Resources/Relocations/aarch64/: program.yml
